# game_of_tdd

./: pyproject.toml
game/: board.py
tests/: test_board.py  test_test.py
