[tool.poetry]
name = "game_of_life"
version = "0.1.0"
description = ""
authors = ["persi <perminov-s-i@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-faker = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
